--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,9 @@
 </head>
 <body ng-app="app" ng-controller="indexCtrl">
   <button ng-click="submit()">ぼたん</button>
+  <button ng-click="viewColor()">文明</button>
+  <button ng-click="viewType()">タイプ</button>
+  <button ng-click="viewRace()">種族</button>
   <div id="chart"></div>
 </body>
 </html>
