--- a/static/index.html
+++ b/static/index.html
@@ -8,66 +8,112 @@
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="/css/angular-datepicker.min.css" rel="stylesheet" type="text/css" />
   <link href="/css/c3.min.css" rel="stylesheet" type="text/css">
-  <link href="/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
-  <link href="/css/animate.css" rel="stylesheet" type="text/css" />
-  <link href="/css/admin.css" rel="stylesheet" type="text/css" />
+  <link href="/css/styles.css" rel="stylesheet" type="text/css" />
 </head>
-<body class="light_theme blue_thm fixed_header left_nav_fixed" ng-app="app" ng-controller="indexCtrl">
-<div class="wrapper">
-  <div class="header_bar">
-    <div class="brand">
-      <div class="small_logo" style="display:none"><img src="images/s-logo.png" width="50" height="47" alt="s-logo" /> <img src="images/r-logo.png" width="122" height="20" alt="r-logo" /></div>
-    </div>
-    <div class="header_top_bar">
-      <a href="javascript:void(0);" class="menutoggle"> <i class="fa fa-bars"></i> </a>
-    </div>
-  </div>
-  <div class="inner">
-    <div class="left_nav">
-      <div class="search_bar"> <i class="fa fa-search"></i>
-        <input name="" type="text" class="search" placeholder="Search Dashboard..." />
-      </div>
+<body ng-app="app" ng-controller="indexCtrl">
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sidebar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
 
-      <button ng-click="submit()">ぼたん</button>
-      <button ng-click="viewColor()">文明</button>
-      <button ng-click="viewType()">タイプ</button>
-      <button ng-click="viewRace()">種族</button>
+		</div><!-- /.container-fluid -->
+	</nav>
 
-      <datepicker date-set="2015/06/01" date-format="yyyy-MM-dd">
-        <input ng-model="startDate" type="text" placeholder="start date" />
-      </datepicker>
-      <datepicker date-set="2015/06/01" date-format="yyyy-MM-dd">
-        <input ng-model="endDate" type="text" placeholder="end date"/>
-      </datepicker>
-    </div>
-    <div class="contentpanel">
-      <div class="pull-left breadcrumb_admin clear_both">
-      </div>
-      <div class="container clear_both padding_fix">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="block-web">
-              <div class="header">
-                <h3 class="content-header">Graph</h3>
-              </div>
-              <div class="porlets-content">
-                <div id="chart"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
+		<form role="search">
+			<div class="form-group">
+        <datepicker date-set="2015/06/30" date-format="yyyy-MM-dd">
+          <input ng-model="startDate" class="form-control" type="text" placeholder="start date" />
+        </datepicker>
+        <datepicker date-set="2015/06/30" date-format="yyyy-MM-dd">
+          <input ng-model="endDate" class="form-control" type="text" placeholder="end date"/>
+        </datepicker>
+        <input type="number" class="form-control" ng-model="count">
+        <button ng-click="submit()">ぼたん</button>
+        <button ng-click="viewColor()">文明</button>
+        <button ng-click="viewType()">タイプ</button>
+        <button ng-click="viewRace()">種族</button>
+			</div>
+		</form>
+		<ul class="nav menu">
+			<li><a href="index.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
+			<li><a href="widgets.html"><span class="glyphicon glyphicon-th"></span> Widgets</a></li>
+			<li class="active"><a href="charts.html"><span class="glyphicon glyphicon-stats"></span> Charts</a></li>
+			<li><a href="tables.html"><span class="glyphicon glyphicon-list-alt"></span> Tables</a></li>
+		</ul>
+	</div><!--/.sidebar-->
+
+	<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
+		<div class="row">
+			<ol class="breadcrumb">
+			</ol>
+		</div><!--/.row-->
+
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">Line Chart</div>
+					<div class="panel-body">
+						<div class="canvas-wrapper">
+							<canvas class="main-chart" id="line-chart" height="200" width="600"></canvas>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div><!--/.row-->
+
+		<div class="row">
+			<div class="col-md-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">Pie Chart</div>
+					<div class="panel-body">
+						<div class="canvas-wrapper">
+							<canvas class="chart" id="chart" ></canvas>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">Doughnut Chart</div>
+					<div class="panel-body">
+						<div class="canvas-wrapper">
+							<canvas class="chart" id="doughnut-chart" ></canvas>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div><!--/.row-->
+
+
+
+	</div>	<!--/.main-->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="/js/d3.min.js"></script>
   <script src="/js/c3.min.js"></script>
-  <script src="/js/toggles.min.js"></script>
-  <script src="/js/common-script.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/angular-datepicker.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script>
+		!function ($) {
+		    $(document).on("click","ul.nav li.parent > a > span.icon", function(){
+		        $(this).find('em:first').toggleClass("glyphicon-minus");
+		    });
+		    $(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
+		}(window.jQuery);
+		$(window).on('resize', function () {
+		  if ($(window).width() > 768) $('#sidebar-collapse').collapse('show')
+		})
+		$(window).on('resize', function () {
+		  if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
+		})
+	</script>
 </body>
 </html>
