--- a/static/index.html
+++ b/static/index.html
@@ -93,6 +93,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="/js/d3.min.js"></script>
   <script src="/js/c3.min.js"></script>
+  <script src="/js/service/c3Service.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/angular-datepicker.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
