add button style

--- a/static/index.html
+++ b/static/index.html
@@ -35,10 +35,10 @@
           <input ng-model="endDate" class="form-control" type="text" placeholder="end date"/>
         </datepicker>
         <input type="number" class="form-control" ng-model="count">
-        <button ng-click="submit()">ぼたん</button>
-        <button ng-click="viewColor()">文明</button>
-        <button ng-click="viewType()">タイプ</button>
-        <button ng-click="viewRace()">種族</button>
+        <button class="btn btn-primary" ng-click="submit()">ぼたん</button>
+        <button class="btn btn-primary" ng-click="viewColor()">文明</button>
+        <button class="btn btn-primary" ng-click="viewType()">タイプ</button>
+        <button class="btn btn-primary" ng-click="viewRace()">種族</button>
 			</div>
 		</form>
 		<ul class="nav menu">
