--- a/static/index.html
+++ b/static/index.html
@@ -36,9 +36,6 @@
         </datepicker>
         <input type="number" class="form-control" ng-model="count">
         <button class="btn btn-primary" ng-click="submit()">ぼたん</button>
-        <button class="btn btn-primary" ng-click="viewColor()">文明</button>
-        <button class="btn btn-primary" ng-click="viewType()">タイプ</button>
-        <button class="btn btn-primary" ng-click="viewRace()">種族</button>
 			</div>
 		</form>
 		<ul class="nav menu">
@@ -77,10 +74,9 @@
 			</div>
 			<div class="col-md-6">
 				<div class="panel panel-default">
-					<div class="panel-heading">Doughnut Chart</div>
+					<div class="panel-heading">種族分布</div>
 					<div class="panel-body">
-						<div class="canvas-wrapper">
-						</div>
+						<div class="canvas-wrapper" id="typeRace"></div>
 					</div>
 				</div>
 			</div>
@@ -91,12 +87,13 @@
 	</div>	<!--/.main-->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="/js/d3.min.js"></script>
-  <script src="/js/c3.min.js"></script>
+  <script src="/js/lib/d3.min.js"></script>
+  <script src="/js/lib/c3.min.js"></script>
+  <script src="/js/lib/angular-datepicker.min.js"></script>
+  <script src="/js/lib/moment.js"></script>
   <script src="/js/service/c3Service.js"></script>
   <script src="/js/service/chartService.js"></script>
   <script src="/js/app.js"></script>
-  <script src="/js/angular-datepicker.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script>
 		!function ($) {
