--- a/static/index.html
+++ b/static/index.html
@@ -34,16 +34,10 @@
         <datepicker date-format="yyyy-MM-dd">
           <input ng-model="endDate" class="form-control" type="text" placeholder="end date"/>
         </datepicker>
-        <input type="number" class="form-control" ng-model="count">
-        <button class="btn btn-primary" ng-click="submit()">ぼたん</button>
+        <input type="number" class="form-control" ng-model="count" placeholder="win count">
+        <button class="btn btn-primary btn-block" ng-click="submit()">検索</button>
 			</div>
 		</form>
-		<ul class="nav menu">
-			<li><a href="index.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
-			<li><a href="widgets.html"><span class="glyphicon glyphicon-th"></span> Widgets</a></li>
-			<li class="active"><a href="charts.html"><span class="glyphicon glyphicon-stats"></span> Charts</a></li>
-			<li><a href="tables.html"><span class="glyphicon glyphicon-list-alt"></span> Tables</a></li>
-		</ul>
 	</div><!--/.sidebar-->
 
 	<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
