--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
   <link href="/css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body ng-app="app" ng-controller="indexCtrl">
+
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -21,8 +22,7 @@
 					<span class="icon-bar"></span>
 				</button>
 			</div>
-
-		</div><!-- /.container-fluid -->
+		</div>
 	</nav>
 
 	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
@@ -34,28 +34,28 @@
         <datepicker date-format="yyyy-MM-dd">
           <input ng-model="endDate" class="form-control" type="text" placeholder="end date"/>
         </datepicker>
-        <input type="number" class="form-control" ng-model="count" placeholder="win count">
+        <input type="number" class="form-control" min="0" max="99" ng-model="count" placeholder="win count">
         <button class="btn btn-primary btn-block" ng-click="submit()">検索</button>
 			</div>
 		</form>
-	</div><!--/.sidebar-->
+	</div>
 
 	<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
-		<div class="row">
-			<ol class="breadcrumb">
-			</ol>
-		</div><!--/.row-->
+
+    <div class="row">
+			<ol class="breadcrumb"></ol>
+		</div>
 
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="panel panel-default">
-					<div class="panel-heading">Line Chart</div>
+					<div class="panel-heading">日付別デッキ分布</div>
 					<div class="panel-body">
-
-					</div>
+            <div class="canvas-wrapper" id="typeTime"></div>
+          </div>
 				</div>
 			</div>
-		</div><!--/.row-->
+		</div>
 
 		<div class="row">
 			<div class="col-md-6">
@@ -74,11 +74,9 @@
 					</div>
 				</div>
 			</div>
-		</div><!--/.row-->
+		</div>
 
-
-
-	</div>	<!--/.main-->
+	</div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="/js/lib/d3.min.js"></script>
@@ -91,10 +89,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script>
 		!function ($) {
-		    $(document).on("click","ul.nav li.parent > a > span.icon", function(){
-		        $(this).find('em:first').toggleClass("glyphicon-minus");
-		    });
-		    $(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
+		  $(document).on("click","ul.nav li.parent > a > span.icon", function() {
+		    $(this).find('em:first').toggleClass("glyphicon-minus");
+		  });
+		  $(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
 		}(window.jQuery);
 		$(window).on('resize', function () {
 		  if ($(window).width() > 768) $('#sidebar-collapse').collapse('show')
