--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
+        <a class="navbar-brand" href="#"><span>Lumino</span>Admin</a>
 			</div>
 		</div>
 	</nav>
