--- a/static/index.html
+++ b/static/index.html
@@ -15,8 +15,7 @@
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sidebar-collapse">
-					<span class="sr-only">Toggle navigation</span>
+				<button id="toggleButton" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sidebar-collapse">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -39,6 +38,9 @@
         <button class="btn btn-primary btn-block" ng-click="submit()">検索</button>
 			</div>
 		</form>
+    <div class="attribution text-center">
+       author <a href="https://twitter.com/dm_plateau" target="_blank">@dm_plateau</a>
+    </div>
 	</div>
 
 	<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
